--- a/public/home.css
+++ b/public/home.css
@@ -1,3 +1,7 @@
+/*
+Contains css for navbar, card, and background image which is common to all i think.
+*/
+
 /* Reset and basic styles */
 * {
     margin: 0;
