--- a/public/searchBook.css
+++ b/public/searchBook.css
@@ -1,3 +1,10 @@
+/* Search Icon */
+.search-icon {
+    margin-top: 1.5rem;
+    font-size: 2rem;
+    color: #ffffff;
+  }
+
 .search-icon-2 {
     z-index: 500;
     opacity: 0;
