Further code optimized, a little left

--- a/public/searchBook.css
+++ b/public/searchBook.css
@@ -1,3 +1,6 @@
+/*Used to style the search bar and the search results, used by admin portal and user portal to search for books
+*/
+
 /* Search Icon */
 .search-icon {
     margin-top: 1.5rem;
