--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -4,8 +4,8 @@
 <head>
     <title>Admin Portal</title>
     <%- include('includes/commonCss') %>
+    <%- include('includes/fontAwesome') %>
     <link rel="stylesheet" href="adminportal.css">
-    <% include('includes/fontAwesome') %>
     <link rel="stylesheet" href="/searchBook.css">
     <link rel="stylesheet" href="/flashMessagesFrontEnd.css">
     
