--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <%- include('includes/commonCss') %>
     <%- include('includes/fontAwesome') %>
+    <link rel="stylesheet" href="/navbar.css">
+    <link rel="stylesheet" href="/card.css">
 </head>
 
 <body>
