--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Admin Page</title>
+    <%- include('includes/commonCss') %>
     <link rel="stylesheet" href="loginadmin.css">
+    <link rel="stylesheet" href="flashMessagesFrontEnd.css">
 </head>
 
 <body>
