--- a/public/flashMessagesFrontEnd.css
+++ b/public/flashMessagesFrontEnd.css
@@ -1,21 +1,24 @@
 /* Flash Messages */
 .flash-messages {
-    position: fixed;
-    top: 5rem;
-    width: 100%;
-    text-align: center;
-    z-index: 100;
-    padding: 10px;
-  }
-  
-  .flash-message {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 5px;
-    border-radius: 5px;
-    font-weight: bold;
-  }
-  
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.flash-message {
+  background-color: rgba(255, 0, 0, 0.8);
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin-bottom: 10px;
+  text-align: center;
+  box-shadow: 0 5px 15px rgba(255, 0, 0, 0.4);
+  animation: fadeIn 1s ease-in-out;
+}
+
   .error-message {
     background-color: #e74c3c;
   }
