organized code, and made sure search function works in both userDetail and borrowerDetail

--- a/views/bookDetails.ejs
+++ b/views/bookDetails.ejs
@@ -4,6 +4,7 @@
     <title>Book Details</title>
     <%- include('includes/commonCss') %>
     <%- include('includes/fontAwesome') %>
+    <link rel="stylesheet" href="/navbar.css">
 </head>
 <body>
 
