--- a/views/borrowerDetails.ejs
+++ b/views/borrowerDetails.ejs
@@ -3,7 +3,9 @@
 
 <head>
     <title>Borrower Details</title>
+    <%- include('includes/commonCss') %>
     <link rel="stylesheet" href="/borrowdetails.css">
+    <link rel="stylesheet" href="/flashMessagesFrontEnd.css">
 </head>
 
 <body>
