--- a/views/loginCustomer.ejs
+++ b/views/loginCustomer.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Customer Page</title>
+    <%- include('includes/commonCss')%>
     <link rel="stylesheet" href="logincustomer.css">
     <link rel="stylesheet" href="flashmessagesFrontEnd.css">
 </head>
