--- a/views/addBooks.ejs
+++ b/views/addBooks.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Book Portal</title>
+    <%- include('includes/commonCss') %>
     <link rel="stylesheet" href="addbook.css">
 </head>
 
