--- a/views/registerCustomer.ejs
+++ b/views/registerCustomer.ejs
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Customer Page</title>
+    <%- include('includes/commonCss') %>
     <link rel="stylesheet" href="registercustomer.css">
+    <link rel="stylesheet" href="flashmessagesFrontEnd.css">
 </head>
 
 <body>
