--- a/public/flashMessagesFrontEnd.css
+++ b/public/flashMessagesFrontEnd.css
@@ -5,9 +5,10 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  z-index: 11;
 }
 
-.flash-message {
+.message-error {
   background-color: rgba(255, 0, 0, 0.8);
   color: #fff;
   padding: 10px 20px;
@@ -19,10 +20,23 @@
   animation: fadeIn 1s ease-in-out;
 }
 
+.message-success {
+  background-color: #2ecc71;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin-bottom: 10px;
+  text-align: center;
+  box-shadow: 0 5px 15px rgba(255, 0, 0, 0.4);
+  animation: fadeIn 1s ease-in-out;
+
+}
+/* 
   .error-message {
     background-color: #e74c3c;
   }
   
   .success-message {
     background-color: #2ecc71;
-  }
+  } */
