--- a/views/includes/filterSearchReservation.ejs
+++ b/views/includes/filterSearchReservation.ejs
@@ -1,3 +1,4 @@
+<% if (partialSearchFilter == false) { %>
 <select name="reservationStatus" id="reservation-status">
     <option value="all">All</option>
     <option value="reserved">Reserved</option>
@@ -5,4 +6,12 @@
     <option value="completed">Completed</option>
     <option value="overdue">Overdue</option>
     <option value="cancelled">Cancelled</option>
+    <option value="baddebt">Bad Debt</option>
 </select>
+<% } else{%>
+    <select name="reservationStatus" id="reservation-status">
+        <option value="all">All</option>
+        <option value="overdue">Overdue</option>
+        <option value="baddebt">Bad Debt</option>
+    </select>
+<% } %>
