--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -17,8 +17,8 @@
     <div class="navbar">
         <div class="logo">U.K Library</div>
         <div class="nav-links">
-            <a href="/home" class="btn">Home</a>
-            <a href="/logout" class="btn">Logout</a>
+            <a href="/" class="btn">Home</a>
+            <a href="/logout" id="btn-logout">Logout</a>
         </div>
     </div>
     
@@ -28,7 +28,7 @@
         <div class="logo">U.K Library</div>
         <div class="nav-links">
             <a href="/home" class="btn">Home</a>
-            <a href="/logout" class="btn">Logout</a>
+            <a href="/logout" id="btn-logout">Logout</a>
         </div>
     </div>
 <%}%>
