--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -13,6 +13,9 @@
 
 <body>
     <h1>Welcome to the Admin Portal</h1>
+          <!-- We used axios, so couldnt do res.render from front end so thats why manually creating
+    a flash message-->
+    <div id="flash-message" class="flash-messages"> </div>
 
     <% success.forEach(function(message) { %>
         <p>
@@ -32,6 +35,8 @@
         <i class="fas fa-search"></i>
     </div>
                     <a href="/showReservations" class="btn">Show Reservations</a>
+                    <a href="/userRecord" class="btn">User Record and setting limits</a>
+                    <a href="/overdueManagmentPage" class="btn">Overdue and Bad reservations management</a>
                     <!--a button here which sends a get request to showCompleted reservation, then we go to ROUTER-->
                     <!-- <a href="/showBadAndCompletedReservations" class="btn">Show Completed Reservations</a> -->
 
