--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -17,17 +17,7 @@
     a flash message-->
     <div id="flash-message" class="flash-messages"> </div>
 
-    <% success.forEach(function(message) { %>
-        <p>
-            <%= message %>. This is a flash message,needs to be modified with CSS
-        </p>
-    <%}) %>
-
-    <% errors.forEach(function(message) { %>
-        <p>
-                    <%= message %>. This is a flash message,needs to be modified with CSS
-        </p>
-    <%}) %>
+   <%- include('includes/flashMessage') %>
 
     <a href="/addBooks">Add Books</a>
     <a href="/logout">Logout</a>
@@ -36,7 +26,7 @@
     </div>
                     <a href="/showReservations" class="btn">Show Reservations</a>
                     <a href="/userRecord" class="btn">User Record and setting limits</a>
-                    <a href="/overdueManagmentPage" class="btn">Overdue and Bad reservations management</a>
+                    <a href="/overdueManagementPage" class="btn">Overdue and Bad reservations management</a>
                     <!--a button here which sends a get request to showCompleted reservation, then we go to ROUTER-->
                     <!-- <a href="/showBadAndCompletedReservations" class="btn">Show Completed Reservations</a> -->
 
