--- a/views/borrowerDetails.ejs
+++ b/views/borrowerDetails.ejs
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="/borrowdetails.css">
     <link rel="stylesheet" href="/flashMessagesFrontEnd.css">
     <link rel="stylesheet" href="/modal.css">
+    <link rel="stylesheet" href="/navbar.css">
 </head>
 
 <body>
 <h1>Reservation Details</h1>
 
-
+<%- include('includes/navbar') %>
 <!-- We used axios, so couldnt do res.render from front end so thats why manually creating
      a flash message-->
      <div id="flash-message" class="flash-message"></div>
 
      <div class="search-icon-reservation">
         <i class="fas fa-search"></i>
-        <input type="text" placeholder="Search" id="live-search-field">
+        <input type="text" placeholder="Search" id="live-search-field-everyone">
     </div>
     <%- include('includes/filterSearchReservation') %>
 
