--- a/views/includes/filterSearchPunishment.ejs
+++ b/views/includes/filterSearchPunishment.ejs
@@ -1,9 +1,9 @@
 <div class="filters">
     <!-- Reservation Filter -->
     <div class="filter-group">
-        <label for="reservationFilter">Reservation Filter:</label>
-        <select id="reservationFilter">
-            <option value="">Select Filter</option>
+        <label for="punishmenTypeFilter">Punishment type filter:</label>
+        <select id="punishment-type-filter">
+            <option value="all">All</option>
             <option value="fine">Fine</option>
             <option value="noReservations">No Reservations</option>
             <option value="deactivation-all">Deactivation All</option>
@@ -13,22 +13,20 @@
     <!-- Status Filter -->
     <div class="filter-group">
         <label for="statusFilter">Status:</label>
-        <select id="statusFilter">
-            <option value="">Select Status</option>
+        <select id="status-filter">
+            <option value="all">All</option>
             <option value="active">Active</option>
             <option value="inactive">Inactive</option>
-            <option value="all">All</option>
         </select>
     </div>
 
     <!-- Punishment Type Filter -->
     <div class="filter-group">
-        <label for="punishmentTypeFilter">Punishment Type:</label>
-        <select id="punishmentTypeFilter">
-            <option value="">Select Punishment Type</option>
+        <label for="reservationStatusFilter">Reservation status:</label>
+        <select id="reservation-status-filter">
+            <option value="all">All</option>
             <option value="baddebt">Bad Debt</option>
             <option value="overdue">Overdue</option>
-            <option value="all">All</option>
         </select>
     </div>
 </div>
