--- a/views/userPortal.ejs
+++ b/views/userPortal.ejs
@@ -11,7 +11,9 @@
     <%- include('includes/fontAwesome') %>
     <link rel="stylesheet" href="addToCart.css">
     <link rel="stylesheet" href="flashMessagesFrontEnd.css">
-    <Link rel="stylesheet" href="modal.css">
+    <link rel="stylesheet" href="modal.css">
+    <link rel="stylesheet" href="/navbar.css">
+    
 </head>
 
 <body>
@@ -27,6 +29,7 @@
 
         <div class="user-actions">
             <a href="/userReservationDetails" class="btn">View Reservation Details</a>
+            <a href="/userPunishmentDetails" class="btn">Punishments(if any)</a>
         </div>
 
         <h2>Search for a Book</h2>
