--- a/views/addBooks.ejs
+++ b/views/addBooks.ejs
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Book Portal</title>
     <%- include('includes/commonCss') %>
+    <link rel="stylesheet" href="/navbar.css">
     <link rel="stylesheet" href="addbook.css">
 </head>
 
 <body>
+    <%- include('includes/navbar') %>
 
     <div class="form-container">
         <h1>Add a New Book</h1>
