--- a/views/userReservationDetails.ejs
+++ b/views/userReservationDetails.ejs
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="/borrowdetails.css">
     <link rel="stylesheet" href="/flashMessagesFrontEnd.css">
     <link rel="stylesheet" href="/modal.css">
+    <link rel="stylesheet" href="/navbar.css">
 </head>
 
 <body>
 <h1>Reservation Details</h1>
 
 
+    <%- include('includes/navbar') %>
 <!-- We used axios, so couldnt do res.render from front end so thats why manually creating
      a flash message-->
      <div id="flash-message" class="flash-message"></div>
 
      <div class="search-icon-reservation">
         <i class="fas fa-search"></i>
-        <input type="text" placeholder="Search" id="live-search-field">
+        <input type="text" placeholder="Search" id="live-search-field-user">
     </div>
     <%- include('includes/filterSearchReservation') %>
 
@@ -35,52 +37,7 @@
     </div> -->
     <%- include('includes/modal') %>
 
-<table class="user-reservation-table">
-    <thead>
-        <tr>
-            <th>Reservation Number</th>
-            <th>Books Reserved</th>
-            <th>Status</th>
-            <th>Reservation Date</th>
-            <th>Collection Date</th>
-            <th>Return Date</th>
-            <th>Collection Date Deadline</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody class="user-reservation-table-body">
-        <% let i = 0 %>
-        <% reservations.forEach(function(reservation) { %>
-        
-        <% if (reservation.status != 'completed') { %>
-        <% i = i + 1 %>
-        <tr class="reservation-row" data-number="<%= reservation.reservation_id %>">
-            <td><%= i %></td>
-            <td class="title-copies" data-number="<%= reservation.book_id %>">
-                <!-- <% if (reservation.books.length == 1) { %>
-                <%= reservation.books[0].book_title %> <%= reservation.books[0].number_of_copies %>
-                <% } else {%>
-                    <button class="show-books" data-number="<%= reservation.reservation_id %>">Show Books</button>
-                    <% }%> -->
-                <button class="show-books" data-number="<%= reservation.reservation_id %>">Show Books</button>
-            </td>
-            <td class="status" data-number="<%= reservation.reservation_id %>"><%= reservation.status %></td>
-            <td><%= reservation.reserve_date %></td>
-            <td><%= reservation.collect_date %></td>
-            <td><%= reservation.return_date %></td>
-            <td><%= reservation.collect_date_deadline %></td>
-            <!-- <td><a href="/book/<%= reservation.book_id %>"><%= reservation.book_title %></a></td> -->
-            <td><%= reservation.author %></td>
-            <td>
-                <% if (reservation.status === 'reserved') { %>
-                <button class="cancel-reservation" data-number="<%= reservation.reservation_id %>">Cancel Reservation</button>
-                <% } %>
-            </td>
-        </tr>
-        <% } %>
-        <% }); %>
-    </tbody>
-</table>
+    <%- include('includes/userReservationTable') %>
 
 <a href="/userPortal" class="btn">Back to User Portal</a>
 <script>
