--- a/views/loginCustomer.ejs
+++ b/views/loginCustomer.ejs
@@ -38,6 +38,11 @@
             <div class="form-group">
                 <input type="submit" value="Login">
             </div>
+
+  
+            <div class="form-group">
+                <a href="/" class="home-link">Go back to Home Page</a>
+            </div>
         </form>
     </div>
 
