--- a/views/overdueAndBadDebt.ejs
+++ b/views/overdueAndBadDebt.ejs
@@ -28,7 +28,7 @@
     <h2>Overdue and Baddebt reservations</h2>
 <!-- We used axios, so couldnt do res.render from front end so thats why manually creating
      a flash message-->
-    <div id="flash-message" class="flash-message"></div>
+    <!-- <div id="flash-message" class="flash-message"></div> -->
 
 
    
