--- a/views/userReservationDetails.ejs
+++ b/views/userReservationDetails.ejs
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="/modal.css">
     <link rel="stylesheet" href="/navbar.css">
     <link rel="stylesheet" href="/filter.css">
+    <link rel="stylesheet" href="/flashMessagesBackEnd.css">
 </head>
 
 <body>
 
     <%- include('includes/navbar') %>
     <h1>Reservation Details</h1>
-    <div id="flash-message" class="flash-message"></div>
+    <!-- <div id="flash-message" class="flash-message"></div> -->
+    <%- include('includes/flashMessage') %>
 
     <div class="user-details-wrapper">
         <div class="search-icon-reservation">
