--- a/public/modal.css
+++ b/public/modal.css
@@ -21,7 +21,7 @@
     max-width: 500px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     color: #333;
-    text-align: center;
+    /* text-align: center; */
   }
   
   .modal h2 {
