--- a/views/addBooks.ejs
+++ b/views/addBooks.ejs
@@ -18,7 +18,7 @@
         <form action="/addBookToDatabase" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="cover_image">Upload Book Cover:</label>
-                <input type="file" id="cover_image" name="cover_image" accept="image/*">
+                <input type="file" id="cover_image" name="cover_image" accept="image/*" required>
             </div>
             <div class="form-group">
                 <label for="title">Book Title:</label>
